--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-awabw
+<!DOCTYPE html>
+<html>
+<head>
+<title>Repexol's Main Page</title>
+</head>
+<body>
+<div>This website is not finished please goto<a href="https://therepexolstudio.github.io">Repexol's Blog</a></div>
+</body>
+</html>
